--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,16 +1,16 @@
 http {
-  interface="0.0.0.0"
+  interface=0.0.0.0
   port = 8081
 }
 
 sp {
   activemq {
-    address=“0.0.0.0”
-    user=“user”
-    pass=“pass”
+    address=0.0.0.0
+    user=user
+    pass=pass
   }
   simpleservice {
-    readFromTopic="elvisSnapShot"
-    writeToTopic="elvisDiff"
+    readFromTopic=areus
+    writeToTopic=opt
   }
 }
