Added sample time

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -12,5 +12,10 @@ sp {
   simpleservice {
     readFromTopic=areus
     writeToTopic=opt
+    timeBetweenSamples=0.024
   }
+}
+
+reactivemq {
+  autoconnect-timeout = 2 seconds
 }
